--- a/unknowncallerlookup/build.gradle
+++ b/unknowncallerlookup/build.gradle
@@ -7,14 +7,18 @@ android {
     defaultConfig {
         minSdkVersion 8
         targetSdkVersion 19
-        versionCode 13
-        versionName "1.3.0"
+        versionCode 14
+        versionName "1.4.0"
     }
     buildTypes {
         release {
             runProguard false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
+    }
+
+    lintOptions {
+        checkReleaseBuilds false
     }
 }
 
